assets/css/style.css
/* ... */
.xs-promo-popup.mfp-ready .mfp-close {
    opacity: 1;
    -webkit-transform: translateY(0);
    -ms-transform: translateY(0);
    transform: translateY(0);
}

/* at start */

.xs-promo-popup.my-mfp-slide-bottom .zoom-anim-dialog {
    opacity: 0;
    -webkit-transition: all 1s ease .8s;
    -o-transition: all 1s ease .8s;
    transition: all 1s ease .8s;
    -webkit-transform: translateY(-500px);
    -ms-transform: translateY(-500px);
    transform: translateY(-500px);
}

/* animate in */

.xs-promo-popup.my-mfp-slide-bottom.mfp-ready .zoom-anim-dialog {
    opacity: 1;
    -webkit-transform: translateY(0);
    -ms-transform: translateY(0);
    transform: translateY(0);
}


/*===  Modal Flag ===*/


.language-content p {
    color: #fff;
    text-align: center;
    margin-bottom: 40px;
    font-size: 1.25rem;
}

/* language modal */

.flag-lists {
    text-align: center;
}

.flag-lists li {
    display: inline-block;
    margin-right: 25px;
}

.flag-lists li:last-child {
    margin-right: 0;
}

.flag-lists li a {
    display: block;
    color: #FFFFFF;
    -webkit-transition: all 0.4s ease;
    -o-transition: all 0.4s ease;
    transition: all 0.4s ease;
    -webkit-backface-visibility: hidden;
    backface-visibility: hidden;
}

.flag-lists li a:hover {
    opacity: .7;
}

.flag-lists li a img {
    width: 40px;
    height: 40px;
    margin-right: 10px;
}


/* === Header ===*/


/*Hover Effect for header-menu*/

.xs-header {
    padding: 0 0 340px 0;
    background-image: url(/assets/images/header-white-letters.png);
    background-repeat: no-repeat;
    background-position: center bottom;
    width: 100%;
}

@media (max-width: 640px) {
    .xs-header {
        background-size: 220%;
    }
}

.xs-header.header-style2 .xs-menus .nav-menu > li > a:after {
    margin-top: 15.5px;
    border-radius: 5.5px;
    background-color: #ff2fff;
    display: block;
    content: "";
    height: 2px;
    width: 0%;
    left: 50%;
    position: absolute;
    -webkit-transition: width .3s ease-in-out;
    -moz--transition: width .3s ease-in-out;
    transition: width .3s ease-in-out;
    -webkit-transform: translateX(-50%);
    -moz-transform: translateX(-50%);
    transform: translateX(-50%);
}

.xs-header.header-style2 .xs-menus .nav-menu > li > a:hover:after,
.xs-header.header-style2 .xs-menus .nav-menu > li > a:focus:after {
    width: 100%;
}

.xs-header.header-style2 .xs-menus .nav-menu > li > a:hover {
    color: #ff2fff;
}


/*Button header*/

.xs-menu-button-wrapper {
    display: inline-block;
}

.button-request {
    padding: 15px 35px;
    font-size: 0.875rem;
    color: #fff;
    border-radius: 30px;
    border: 1px solid #fff;
}

.button-request:hover {
    color: #fff;
    background-color: #ff2fff;
    border: 1px solid #ff2fff;;
}

.headerContent_title {
    padding-top: 115px;
    margin-bottom: 35px;
    text-align: center;
}

.headerContent_button {
    text-align: center;
}

.headerContent_button a {
    display: inline-block;
    padding: 15px 50px;
    border-radius: 30px;
    text-transform: uppercase;
    font-size: 16px;
    font-weight: 600;
    font-style: normal;
    font-stretch: normal;
    line-height: normal;
    letter-spacing: 0.48px;
    color: #ffffff;
    background-color: #ff2fff;
}

.header_video_wrapper {
    position: absolute;
    top: 0px;
    left: 0px;
    width: 100%;
    z-index: -1;
    background-image: linear-gradient(to right, #660066, #b700b7);
    background-position: left top;
}

.header_video {
    display: block;
    margin: -200px auto;
    width: 2000px;

}

@media (max-width: 1024px) {
    .header_video {
        margin: 0px auto 0;
    }
}

@media (max-width: 640px) {
    .header_video {
        display: block;
        margin: -250px auto 0;
        height: 800px !important;
        width: 640px !important;
    }
}


/* === Problem === */

#problem {
    padding: 60px 0 80px;
    max-width: 100%;
    border-bottom: 1px solid #FFF;
    background-color: #fff;
}

.problem_desc {
    padding-top: 80px;
}

.problemDesc_content {
    margin-bottom: 40px;
}

.problemDesc_bottom {
    border-radius: 100px;
    box-shadow: 0 5px 15px 0 rgba(237, 66, 158, 0.3);
    background-image: linear-gradient(to top, #660066, #b700b7);
}


/* === Answer === */

#answer {
    padding: 50px 0 120px;
    max-width: 100%;
    background-color: #FFF;
}

.answer_title {
    width: 100%;
    text-align: center;
}

.answer_desc {
    text-align: center;
}

.answer_blocks {
    padding-top: 60px;
}

.answer-info-block {
    padding: 70px 30px;
    -webkit-transition: all 0.4s ease;
    -o-transition: all 0.4s ease;
    transition: all 0.4s ease;
    min-height: 366px;
    text-align: center;
    background-color: #FFFFFF;
}

.answer-info-block:hover {
    -webkit-box-shadow: 0px 7px 25px 0px rgba(0, 0, 0, 0.1);
    box-shadow: 0px 7px 25px 0px rgba(0, 0, 0, 0.1);
}

.answer-info-block-content {
    margin-bottom: 15px;
}

.answer-info-block-title {
    margin-bottom: 10px;
    height: 25px;
    overflow: hidden;
}

.answer-info-block .answer-info-img {
    margin-bottom: 25px;
}


/* === Who === */

#who {
    max-width: 100%;
    padding: 135px 0 65px 0;
    background-image: url("/assets/images/who BG.png");
    background-position: center top;
}

.who_img {
    text-align: center;
}


/* === Program === */

#program {
    padding: 100px 0 60px;
}

.program_content {
    margin-bottom: 50px;
}


/*=== Video slider ===*/

.program-intro-video {
    display: flex;
    justify-content: center;
    width: 100%;
    height: 100%;
    border-radius: 10px;
    overflow: hidden;
    box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.3);
}

.img-play {
    display: block;
    margin: 0 auto;
}

.program-intro-video .slider-video-img {
    position: relative;
    z-index: 1;
}

.program-intro-video .btn-gradient {
    position: absolute;
    transition: .3s;
    z-index: 99;
    align-self: center;
    text-align: center;
}
/* ... */

